--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
     "@types/node": "^22.13.1"
+  },
+  "dependencies": {
+    "@supercharge/promise-pool": "^3.2.0"
   }
 }
