--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,10 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.101",
+    "@types/bunyan": "^1.8.11",
     "@types/node": "^22.13.1",
     "@types/node-fetch": "^2.6.2",
     "@types/pg": "^8.11.11",
-    "@types/bunyan": "^1.8.11",
     "babel-loader": "^8.2.5",
     "drizzle-kit": "^0.30.4",
     "eslint-config-prettier": "^8.3.0",
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@defillama/sdk": "^5.0.116",
+    "@types/async-retry": "^1.4.9",
     "async-retry": "^1.3.1",
     "axios": "^0.21.0",
     "axios-rate-limit": "^1.3.0",
