--- a/server/package.json
+++ b/server/package.json
@@ -22,11 +22,12 @@
   },
   "dependencies": {
     "@defillama/sdk": "^5.0.116",
+    "@supercharge/promise-pool": "^3.2.0",
     "@types/async-retry": "^1.4.9",
     "async-retry": "^1.3.1",
     "axios": "^0.21.0",
     "axios-rate-limit": "^1.3.0",
-    "bignumber.js": "^9.0.1",
+    "bignumber.js": "^9.1.2",
     "bunyan": "^1.8.15",
     "bunyan-postgres-stream": "^1.5.5",
     "dotenv": "^8.6.0",
