--- a/server/package.json
+++ b/server/package.json
@@ -11,14 +11,14 @@
     "@types/node": "^22.13.1",
     "@types/node-fetch": "^2.6.2",
     "@types/pg": "^8.11.11",
-    "babel-loader": "^8.2.5",
     "drizzle-kit": "^0.30.4",
+    "esbuild": "^0.25.2",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.5.1",
     "serverless": "^3.21.0",
+    "serverless-esbuild": "^1.55.0",
     "serverless-offline": "^9.1.6",
     "serverless-prune-plugin": "^2.0.1",
-    "ts-loader": "^9.3.1",
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
@@ -36,7 +36,6 @@
     "ethers": "^6.0.0",
     "node-fetch": "^2.6.7",
     "pg": "^8.13.1",
-    "postgres": "^3.2.4",
-    "serverless-webpack": "^5.8.0"
+    "postgres": "^3.2.4"
   }
 }
