--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,9 +33,12 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@tanstack/react-query": "^5.72.0",
+    "@tanstack/react-table": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "latest",
+    "echarts": "latest",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
@@ -48,10 +51,8 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.2",
     "uuid": "latest",
-    "@tanstack/react-table": "latest",
-    "echarts": "latest"
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^22",
