--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "latest",
+    "dayjs": "^1.11.13",
     "echarts": "latest",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
